syntax = "proto3";

package accelbyte.gdpr.registered.v1;
// Version 1.0.0

option csharp_namespace = "Accelbyte.Gdpr.Registered.V1";
option go_package = "accelbyte.net/gdpr/registered_v1";
option java_multiple_files = true;
option java_package = "net.accelbyte.gdpr.registered.v1";
option java_outer_classname = "gdprProto";

service GDPR {

  /**
   Data Generation.
   The generated data will be uploaded into GDPR Service storage.
   */
  rpc DataGeneration(DataGenerationRequest) returns (DataGenerationResponse) {};

  /**
   Data Deletion.
   */
  rpc DataDeletion(DataDeletionRequest) returns (DataDeletionResponse) {};

  /**
   Data Restriction.

   Used to inform registered service when specific IAM account was disabled,
   So that the service could ensure the personal data associated with disabled account ceased to be available to other users.
   */
  rpc DataRestriction(DataRestrictionRequest) returns (DataRestrictionResponse) {};

  /**
  Platform Account Closure.
  Used to inform the registered services to handle the 3rd party account closure.
   */
  rpc PlatformAccountClosure(PlatformAccountClosureRequest) returns (PlatformAccountClosureResponse) {};

}

message DataGenerationRequest {
  string namespace = 1; // namespace of user
  string userId = 2; // user id
  string uploadUrl = 3; // upload url for uploading the generated file into AccelByte GDPR Service storage
  bool isPublisherNamespace = 4; // indicate whether the "namespace" is a publisher namespace or game namespace
}

message DataGenerationResponse {
  bool success = 1; // indicate data generation was success
  string message = 2; // message from data generation process
}

message DataDeletionRequest {
  string namespace = 1; // namespace of user
  string userId = 2; // user id
  bool isPublisherNamespace = 3; // indicate whether the "namespace" is a publisher namespace or game namespace
}

message DataDeletionResponse {
  bool success = 1; // indicate data deletion was success
  string message = 2; // message from data deletion process
}

message DataRestrictionRequest {
  string namespace = 1; // namespace of user
  string userId = 2; // user id
  bool restrict = 3; // restrict or not
  bool isPublisherNamespace = 4; // indicate whether the "namespace" is a publisher namespace or game namespace
}

message DataRestrictionResponse {
  bool success = 1; // indicate restrict processing was success
  string message = 2; // message from restrict processing
}

message AccountInfo {
  string namespace = 1; // namespace
  string userId = 2;    // user id in the namespace
}

message PlatformAccountClosureRequest {
  string platform = 1; // platform: psn, xbox, epicgames, etc
  string platformUserId = 2; // third party account id
  repeated AccountInfo accounts = 3; // account info in each namespace
}

message PlatformAccountClosureResponse {
  bool success = 1; // indicates platform account closure was success
  string message = 2; // message from platform account closure process
}